--- a/latex/citations.bib
+++ b/latex/citations.bib
@@ -882,14 +882,6 @@ number={2},
 pages={617-644},
 doi={10.1109/T-AIEE.1928.5055024}}
 
-
-@misc{aliasmatlab,
-author={Nikhil Prathapani},
-year={2021},
-title={Sampling Theorem Illustration},
-url={https://www.mathworks.com/matlabcentral/fileexchange/45109-sampling-theorem-illustration},
-journal={MATLAB Central File Exchange}}
-
 @inproceedings{sisec2016,
 author = {Liutkus, Antoine and Stöter, Fabian-Robert and Rafii, Zafar and Kitamura, Daichi and Rivet, Bertrand and Ito, Nobutaka and Ono, Nobutaka and Fontecave, Julie},
 year = {2017},
@@ -934,4 +926,59 @@ title = {Time-Frequency Jigsaw Puzzle: adaptive multiwindow and multilayered Gab
 volume = {05},
 journal = {International Journal of Wavelets, Multiresolution and Information Processing},
 doi = {10.1142/S0219691307001768}
+}
+
+@article{fourierhistory,
+author={Domínguez, Alejandro},
+journal={IEEE Pulse},
+title={Highlights in the History of the Fourier Transform [Retrospectroscope]},
+year={2016},
+volume={7},
+number={1},
+pages={53-61},
+doi={10.1109/MPUL.2015.2498500},
+url={https://ieeexplore.ieee.org/stamp/stamp.jsp?arnumber=7389485}
+}
+
+@article{fouriermusic,
+author = {Lostanlen, Vincent and Andén, Joakim and Lagrange, Mathieu},
+year = {2019},
+month = {09},
+pages = {},
+title = {Fourier at the heart of computer music: From harmonic sounds to texture},
+volume = {20},
+journal = {Comptes Rendus Physique},
+doi = {10.1016/j.crhy.2019.07.005},
+url = {https://hal.archives-ouvertes.fr/hal-02283200/file/Fourier_at_the_heart_of_computer_music__from_harmonic_sounds_to_textures%20%281%29.pdf}
+}
+
+@article{fourierhist1,
+author = {Fourier, J. B. J.},
+title = {Théorie de la propagation de la chaleur dans les solides},
+journal = {Institute of France},
+year = {1807}
+}
+
+@article{fourierhist2,
+author = {Fourier, J. B. J.},
+title = {Théorie du mouvement de la chaleur dans les corps solides},
+journal = {Mémoires de l'Académie royale des sciences de l'Institute de France},
+volume = {4},
+year = {1811}
+}
+
+@book{fourierheat,
+author = {Fourier, J. B. J.},
+title = {Théorie analytique de la chaleur},
+year = {1822},
+publisher = {Chez Firmin Didot, Père et Fils},
+}
+
+@inproceedings{wmdct,
+author = {Siedenburg, Kai and Doerfler, Monika},
+year = {2011},
+month = {01},
+pages = {},
+title = {Structured sparsity for audio signals},
+booktitle = {Proc. of the 14th International Conference on Digital Audio Effects (DAFx-11), Paris, France}
 }
