--- a/latex/ch3_methodology.tex
+++ b/latex/ch3_methodology.tex
@@ -7,8 +7,7 @@ Describe open-unmix-pytorch (LSTM vs. gh template)\\
 Summarize CDAE papers (should be simple)\\
 }
 
-\vfill
-\clearpage
+\newpagefill
 
 \section{Methodology}
 
