--- a/latex/ch4_experiment.tex
+++ b/latex/ch4_experiment.tex
@@ -7,8 +7,7 @@ selected spectrograms showing the sliCQ transform vs. the STFT\\
 table of network learning parameters etc. from those repos (and scripts/train.py defaults)\\
 }
 
-\vfill
-\clearpage
+\newpagefill
 
 \section{Experiment}
 
