--- a/latex/citations.bib
+++ b/latex/citations.bib
@@ -982,3 +982,33 @@ pages = {},
 title = {Structured sparsity for audio signals},
 booktitle = {Proc. of the 14th International Conference on Digital Audio Effects (DAFx-11), Paris, France}
 }
+
+
+@article{gausshist,
+author = {Heideman, Michael and Johnson, Don and Burrus, Charles},
+year = {1985},
+pages = {265-277},
+title = {Gauss and the history of the fast Fourier transform},
+volume = {34},
+journal = {Archive for History of Exact Sciences},
+doi = {10.1007/BF00348431}
+}
+
+@book{skiena,
+  address = {London},
+  author = {Skiena, Steven S.},
+  doi = {10.1007/978-1-84800-070-4},
+  keywords = {algorithm programming textbook},
+  publisher = {Springer},
+  title = {The Algorithm Design Manual},
+  year = {2008},
+  pages = {31--40, 273--278},
+}
+
+@article{ffttopten,
+author = {Dongarra, Jack and Sullivan, Francis},
+year = {2000},
+month = {01},
+title = {Top ten algorithms of the century},
+journal = {Computing in Science and Engineering - C in S&E}
+}
