--- a/latex/report.tex
+++ b/latex/report.tex
@@ -60,6 +60,11 @@
 
 \newcommand{\chaptertodo}[1]{\todo[color=magenta!40,inline]{#1}}
 
+\newcommand{\newpagefill}{
+	\vfill
+	\clearpage
+}
+
 \title{\ThesisTitle}
 
 \author{\vspace{1em}\\Sevag Hanssian \\
@@ -82,52 +87,43 @@
 	The short-time Fourier transform (STFT) is an important tool for the time-frequency analysis of acoustic signals. The STFT is commonly used to represent musical signals in digital signal processing algorithms and machine learning models for music information retrieval (MIR). Despite the ubiquity of the STFT, it is limited by a fixed and bounded time-frequency resolution. The Nonstationary Gabor Transform (NSGT) and its realtime variant the sliCQ transform are alternative time-frequency transforms which can better represent musical signals by varying the time-frequency resolution. In the task of music source separation or music demixing, STFT-based models are popular and have achieved success for several years. In this thesis, first the STFT and sliCQ transform are described as tools for representing and manipulating musical signals. Next, the task of music demixing is described. Finally, the STFT is successfully replaced with the sliCQ transform in a neural network for music demixing, indicating a promising direction for future research.
 \end{abstract}
 
-\vfill
-\clearpage %force a page break
+\newpagefill
 
 \tableofcontents
 
-\vfill
-\clearpage %force a page break
+\newpagefill
 
 \listoffigures
 
 \listoflistings
 
-\vfill
-\clearpage %force a page break
+\newpagefill
 
 \subfile{ch1_introduction.tex}
 
-\vfill
-\clearpage %force a page break
+\newpagefill
 
 \subfile{ch2_background.tex}
 
-\vfill
-\clearpage
+\newpagefill
 
 \subfile{ch3_methodology.tex}
 
-\vfill
-\clearpage
+\newpagefill
 
 \subfile{ch4_experiment.tex}
 
-\vfill
-\clearpage
+\newpagefill
 
 \subfile{ch5_conclusion.tex}
 
-\vfill
-\clearpage % force a page break before references
+\newpagefill
 
 %\nocite{*}
 \section{References}
 \printbibliography[heading=none]
 
-\vfill
-\clearpage %force a page break
+\newpagefill
 
 \begin{appendices}
 
